editor prosemirror hauteur minimal dans items

--- a/styles/items.less
+++ b/styles/items.less
@@ -1,6 +1,21 @@
 .penombre {
   &.atout {
+    height: 100%;
+    
     .atout-content .standard-form {
+      height: 100%;
+      .auto {
+        overflow-y: auto;
+        height: 100%;
+        .editor {
+            overflow-y: auto;
+            min-height: 250px;
+          .editor-container {
+            min-height: 250px;
+          }
+        }
+      }
+
       .logo-frame {
         display: flex;
         justify-content: space-between;
@@ -15,6 +30,7 @@
         width: calc(100% - 90px);
         }
       }
+      /*
       .auto {
         // height: auto;
         min-height: 100%;
@@ -22,11 +38,27 @@
         min-height: 100%;
         }
       }
+      */
     }
   }
 
   &.maitrise {
+    height: 100%;
+
     .maitrise-content .standard-form {
+      height: 100%;
+      .auto {
+        overflow-y: auto;
+        height: 100%;
+        .editor {
+            overflow-y: auto;
+            min-height: 250px;
+          .editor-container {
+            min-height: 250px;
+          }
+        }
+      }
+
       .logo-frame {
         display: flex;
         justify-content: space-between;
@@ -41,18 +73,26 @@
           width: calc(100% - 90px);
         }
       }
-      .auto {
-        // height: auto;
-        min-height: 100%;
-        .editor {
-        min-height: 100%;
-        }
-      }
     }
   }
 
   &.pouvoir {
+    // height: 100%;
+
     .pouvoir-content .standard-form {
+      height: 100%;
+      .auto {
+        overflow-y: auto;
+        height: 100%;
+        .editor {
+            overflow-y: auto;
+            min-height: 250px;
+          .editor-container {
+            min-height: 250px;
+          }
+        }
+      }
+
       .logo-frame {
         display: flex;
         justify-content: space-between;
@@ -75,18 +115,25 @@
           width: 100px;
         }
       }
-      .auto {
-        // height: auto;
-        min-height: 100%;
-        .editor {
-        min-height: 100%;
-        }
-      }
     }
   }
 
   &.intrigue {
+    height: 100%;
+
     .intrigue-content .standard-form {
+      height: 100%;
+      .auto {
+        overflow-y: auto;
+        height: 100%;
+        .editor {
+            overflow-y: auto;
+            min-height: 250px;
+          .editor-container {
+            min-height: 250px;
+          }
+        }
+      }
       .logo-frame {
         display: flex;
         justify-content: space-between;
@@ -99,20 +146,28 @@
         }
         .name {
           width: calc(100% - 90px);
-        }
-      }
-      .auto {
-        // height: auto;
-        min-height: 100%;
-        .editor {
-        min-height: 100%;
         }
       }
     }
   }
 
   &.action {
+    height: 100%;
+
     .action-content .standard-form {
+      height: 100%;
+      .auto {
+        overflow-y: auto;
+        height: 100%;
+        .editor {
+            overflow-y: auto;
+            min-height: 250px;
+          .editor-container {
+            min-height: 250px;
+          }
+        }
+      }
+
       .logo-frame {
         display: flex;
         justify-content: space-between;
@@ -125,13 +180,6 @@
         }
         .name {
           width: calc(100% - 90px);
-        }
-      }
-      .auto {
-        // height: auto;
-        min-height: 100%;
-        .editor {
-        min-height: 100%;
         }
       }
     }
