--- a/templates/maitrise.hbs
+++ b/templates/maitrise.hbs
@@ -9,5 +9,5 @@
     {{formGroup systemFields.prerequis value=systemSource.prerequis localize=true}}
     {{formGroup systemFields.niveau value=systemSource.niveau localize=true}}
     {{formInput systemFields.description enriched=enrichedDescription value=system.description name="system.description" toggled=true}}
-  </section>div>
+  </div>
 </section>
