--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1117,6 +1117,32 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.penombre.atout {
+  height: 100%;
+}
+.penombre.atout .atout-content .standard-form {
+  height: 100%;
+  /*
+      .auto {
+        // height: auto;
+        min-height: 100%;
+        .editor {
+        min-height: 100%;
+        }
+      }
+      */
+}
+.penombre.atout .atout-content .standard-form .auto {
+  overflow-y: auto;
+  height: 100%;
+}
+.penombre.atout .atout-content .standard-form .auto .editor {
+  overflow-y: auto;
+  min-height: 250px;
+}
+.penombre.atout .atout-content .standard-form .auto .editor .editor-container {
+  min-height: 250px;
+}
 .penombre.atout .atout-content .standard-form .logo-frame {
   display: flex;
   justify-content: space-between;
@@ -1130,11 +1156,22 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.atout .atout-content .standard-form .logo-frame .name {
   width: calc(100% - 90px);
 }
-.penombre.atout .atout-content .standard-form .auto {
-  min-height: 100%;
+.penombre.maitrise {
+  height: 100%;
 }
-.penombre.atout .atout-content .standard-form .auto .editor {
-  min-height: 100%;
+.penombre.maitrise .maitrise-content .standard-form {
+  height: 100%;
+}
+.penombre.maitrise .maitrise-content .standard-form .auto {
+  overflow-y: auto;
+  height: 100%;
+}
+.penombre.maitrise .maitrise-content .standard-form .auto .editor {
+  overflow-y: auto;
+  min-height: 250px;
+}
+.penombre.maitrise .maitrise-content .standard-form .auto .editor .editor-container {
+  min-height: 250px;
 }
 .penombre.maitrise .maitrise-content .standard-form .logo-frame {
   display: flex;
@@ -1149,11 +1186,19 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.maitrise .maitrise-content .standard-form .logo-frame .name {
   width: calc(100% - 90px);
 }
-.penombre.maitrise .maitrise-content .standard-form .auto {
-  min-height: 100%;
+.penombre.pouvoir .pouvoir-content .standard-form {
+  height: 100%;
 }
-.penombre.maitrise .maitrise-content .standard-form .auto .editor {
-  min-height: 100%;
+.penombre.pouvoir .pouvoir-content .standard-form .auto {
+  overflow-y: auto;
+  height: 100%;
+}
+.penombre.pouvoir .pouvoir-content .standard-form .auto .editor {
+  overflow-y: auto;
+  min-height: 250px;
+}
+.penombre.pouvoir .pouvoir-content .standard-form .auto .editor .editor-container {
+  min-height: 250px;
 }
 .penombre.pouvoir .pouvoir-content .standard-form .logo-frame {
   display: flex;
@@ -1175,11 +1220,22 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.pouvoir .pouvoir-content .standard-form .details select[name="system.type"] {
   width: 100px;
 }
-.penombre.pouvoir .pouvoir-content .standard-form .auto {
-  min-height: 100%;
+.penombre.intrigue {
+  height: 100%;
 }
-.penombre.pouvoir .pouvoir-content .standard-form .auto .editor {
-  min-height: 100%;
+.penombre.intrigue .intrigue-content .standard-form {
+  height: 100%;
+}
+.penombre.intrigue .intrigue-content .standard-form .auto {
+  overflow-y: auto;
+  height: 100%;
+}
+.penombre.intrigue .intrigue-content .standard-form .auto .editor {
+  overflow-y: auto;
+  min-height: 250px;
+}
+.penombre.intrigue .intrigue-content .standard-form .auto .editor .editor-container {
+  min-height: 250px;
 }
 .penombre.intrigue .intrigue-content .standard-form .logo-frame {
   display: flex;
@@ -1194,11 +1250,22 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.intrigue .intrigue-content .standard-form .logo-frame .name {
   width: calc(100% - 90px);
 }
-.penombre.intrigue .intrigue-content .standard-form .auto {
-  min-height: 100%;
+.penombre.action {
+  height: 100%;
 }
-.penombre.intrigue .intrigue-content .standard-form .auto .editor {
-  min-height: 100%;
+.penombre.action .action-content .standard-form {
+  height: 100%;
+}
+.penombre.action .action-content .standard-form .auto {
+  overflow-y: auto;
+  height: 100%;
+}
+.penombre.action .action-content .standard-form .auto .editor {
+  overflow-y: auto;
+  min-height: 250px;
+}
+.penombre.action .action-content .standard-form .auto .editor .editor-container {
+  min-height: 250px;
 }
 .penombre.action .action-content .standard-form .logo-frame {
   display: flex;
@@ -1212,12 +1279,6 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 }
 .penombre.action .action-content .standard-form .logo-frame .name {
   width: calc(100% - 90px);
-}
-.penombre.action .action-content .standard-form .auto {
-  min-height: 100%;
-}
-.penombre.action .action-content .standard-form .auto .editor {
-  min-height: 100%;
 }
 body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   background-color: #faeed6;
