--- a/styles/chat.less
+++ b/styles/chat.less
@@ -33,6 +33,7 @@
       }
 
       img {
+        border-radius: @border-radius-tiny;
         max-width: 50px;
         max-height: 50px;
         margin-right: 4px;
