--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -40,6 +40,7 @@
 @small-case-size: 20px;
 @border-radius: 6px;
 @border-radius-small: 4px;
+@border-radius-tiny: 2.5px;
 @note-size: 55px;
 @case-cle-size: 25px;
 
