Nouveau fond fiche

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -204,6 +204,7 @@ body {
         .eminence-content {
           background-color: @background-light; // Si et seulement si on est en mode clair (et pas sombre) de la fiche
           background-image: url("/systems/penombre/assets/ui/fond.webp");
+          background-repeat: repeat;
 
           // Section timbre
           .eminence-timbre {
