--- a/css/penombre.css
+++ b/css/penombre.css
@@ -121,6 +121,7 @@ body {
 body.theme-light .penombre.eminence .eminence-content {
   background-color: #faeed6;
   background-image: url("/systems/penombre/assets/ui/fond.webp");
+  background-repeat: repeat;
 }
 body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .label-timbre {
   color: #56605b;
