--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -11,6 +11,8 @@ body {
       &.adversaire {
         .adversaire-content {
           background-color: @background-light; /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
+          background-image: url("/systems/penombre/assets/ui/fond.webp");
+          background-repeat: repeat;
         }
       }
     }
