--- a/styles/chat.less
+++ b/styles/chat.less
@@ -1,6 +1,6 @@
 #interface #sidebar,
 #interface #ui-right-column-1 {
-  & .chat-message {    
+  & .chat-message {
     .theme-dark & {
       background: #0b0a13e6;
       color: var(--color-textLight);
@@ -62,6 +62,18 @@
           font-family: "Cattedrale";
           font-size: 1.1rem;
           text-align: center;
+        }
+        .roll-infos {
+          font-family: "Cattedrale";
+          font-size: 1rem;
+          text-align: center;
+          margin: 2px 0 2px 0;
+        }
+        .participate-container {
+          button {
+            font-family: "Cattedrale";
+            font-size: 0.9rem;
+          }
         }
         .roll-results {
           font-family: "Cattedrale";
