--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -1,3 +1,25 @@
+.penombre.roll-dialog {
+  .window-content {
+    .theme-dark & {
+      background: #0b0a13e6;
+      color: var(--color-textLight);
+      span,
+      label {
+        color: var(--color-textLight);
+      }
+    }
+    .theme-light & {
+      background-color: var(--color-light-3);
+      background-image: url("/systems/penombre/assets/ui/fond.webp");
+      color: #222;
+      span,
+      label {
+        color: #222;
+      }
+    }
+  }
+}
+
 .penombre-roll-dialog {
   display: flex;
   flex-direction: column;
