--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1618,18 +1618,23 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   font-family: "Cattedrale";
   font-size: 1.1rem;
   text-align: center;
+  padding-top: 5px;
 }
 #interface #sidebar .chat-message .message-content .dice-roll.penombre .roll-infos,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .roll-infos {
   font-family: "Cattedrale";
   font-size: 1rem;
   text-align: center;
-  margin: 2px 0 2px 0;
+  margin: 5px 0 5px 0;
+}
+#interface #sidebar .chat-message .message-content .dice-roll.penombre .participate-container,
+#interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .participate-container {
+  margin-bottom: 5px;
 }
 #interface #sidebar .chat-message .message-content .dice-roll.penombre .participate-container button,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .participate-container button {
   font-family: "Cattedrale";
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 #interface #sidebar .chat-message .message-content .dice-roll.penombre .roll-results,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .roll-results {
