--- a/styles/chat.less
+++ b/styles/chat.less
@@ -62,17 +62,19 @@
           font-family: "Cattedrale";
           font-size: 1.1rem;
           text-align: center;
+          padding-top: 5px;;
         }
         .roll-infos {
           font-family: "Cattedrale";
           font-size: 1rem;
           text-align: center;
-          margin: 2px 0 2px 0;
+          margin: 5px 0 5px 0;
         }
         .participate-container {
+          margin-bottom: 5px;;
           button {
             font-family: "Cattedrale";
-            font-size: 0.9rem;
+            font-size: 1rem;
           }
         }
         .roll-results {
