--- a/templates/chat/action-collegiale.hbs
+++ b/templates/chat/action-collegiale.hbs
@@ -1,10 +1,15 @@
-<div class="roll-result-total">
-  <div class="autres-succes">{{#if hasAutresSucces}}{{localize "PENOMBRE.ui.otherSuccess"}} : {{#each autresSucces}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/each}}{{/if}}</div>
-  <div class="total">{{localize "PENOMBRE.ui.total"}} : {{totalSucces}}</div>
-  {{#if hasDifficulte}}
-    <div class="difficulte">
-      <div> {{localize "PENOMBRE.ui.difficulte"}} : {{difficulte}}</div>
-      <div>{{#if isSuccess}} {{localize "PENOMBRE.ui.resultSuccess"}} {{else}} <div data-tooltip="{{localize "PENOMBRE.ui.resultEchecTooltip"}}">{{localize "PENOMBRE.ui.resultEchec" x=succesManquants }}</div> {{/if}}</div>
-    </div>
-  {{/if}}
+<div class="roll-result-self">
+  {{localize "PENOMBRE.ui.success"}} : {{nbSucces}}
 </div>
+{{#if isMessagePrincipal}}
+  <div class="roll-result-total">
+    {{#if hasAutresSucces}}<div class="autres-succes">{{localize "PENOMBRE.ui.otherSuccess"}} : {{#each autresSucces}}{{#if this.participe}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/if}}{{/each}}{{/if}}</div>
+    <div class="total">{{localize "PENOMBRE.ui.total"}} : {{totalSucces}}</div>
+    {{#if hasDifficulte}}
+      <div class="difficulte">
+        <div> {{localize "PENOMBRE.ui.difficulte"}} : {{difficulte}}</div>
+        <div>{{#if isSuccess}} {{localize "PENOMBRE.ui.resultSuccess"}} {{else}} <div data-tooltip="{{localize "PENOMBRE.ui.resultEchecTooltip"}}">{{localize "PENOMBRE.ui.resultEchec" x=succesManquants }}</div> {{/if}}</div>
+      </div>
+    {{/if}}
+  </div>
+{{/if}}
