--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1454,25 +1454,17 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   height: 20px;
 }
 .penombre-roll-dialog .line-2 fieldset {
-  padding-top: 0;
+  padding: 0;
 }
 .penombre-roll-dialog .line-2 fieldset .atouts {
   overflow-y: auto;
-  border: solid;
-  border-width: 1px;
-  border-color: gray;
 }
 .penombre-roll-dialog .line-2 fieldset .atouts .atout {
-  margin-top: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 2px;
-  margin-right: 2px;
-  /*
-            &:nth-child(even) {
-          }
-          */
+  height: 20px;
+  padding: 0 5px 0 5px;
 }
 .penombre-roll-dialog .line-2 fieldset .atouts .atout:hover {
   cursor: pointer;
@@ -1497,6 +1489,7 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 10px;
 }
 .penombre-roll-dialog .line-2 fieldset .options-total .bonus-total label {
   margin-right: 10px;
@@ -1506,47 +1499,68 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   width: 40px;
 }
 .penombre-roll-dialog .line-3 {
-  display: table;
-  float: left;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 .penombre-roll-dialog .line-3 .part-left-3 {
+  display: flex;
+  flex-direction: column;
   width: 280px;
-  float: left;
+  margin-right: 10px;
+}
+.penombre-roll-dialog .line-3 .part-left-3 fieldset {
+  padding-left: 0;
+  padding-right: 0;
+}
+.penombre-roll-dialog .line-3 .part-left-3 .formuleElements {
+  display: flex;
+  flex-direction: row;
+}
+.penombre-roll-dialog .line-3 .part-left-3 .formuleElements label {
+  width: 50px;
+  margin-right: 10px;
+  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.penombre-roll-dialog .line-3 .part-left-3 .formuleElements input[type="text"]#autreBonus {
+  width: 50px;
+  margin-right: 10px;
+  text-align: center;
+}
+.penombre-roll-dialog .line-3 .part-left-3 .formuleElements input[type="text"]#formule {
+  width: 140px;
+  margin-right: 10px;
+  text-align: center;
 }
 .penombre-roll-dialog .line-3 .part-left-3 .des-img {
-  float: left;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 .penombre-roll-dialog .line-3 .part-left-3 .des-img img {
   width: 75px;
   height: 75px;
-  float: left;
 }
 .penombre-roll-dialog .line-3 .part-left-3 .rollMode {
   width: calc(100% - 10px);
 }
 .penombre-roll-dialog .line-3 .part-right-3 {
-  margin-left: 285px;
-  width: calc(100% - 285px);
+  display: flex;
+  flex-direction: column;
 }
 .penombre-roll-dialog .line-3 .part-right-3 .depensetotal {
-  float: left;
-  width: 100%;
   display: flex;
   align-items: center;
 }
 .penombre-roll-dialog .line-3 .part-right-3 .depensetotal label {
   width: 200px;
-  float: left;
 }
 .penombre-roll-dialog .line-3 .part-right-3 .depensetotal .form-fields {
-  float: left;
   width: 40px;
 }
 .penombre-roll-dialog .line-3 .part-right-3 .depensetotal .form-fields input {
   text-align: center;
-  float: left;
   width: 40px;
 }
 .theme-dark #interface #sidebar .chat-message,
