--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -91,21 +91,17 @@
 
   .line-2 {
     fieldset {
-      padding-top: 0;
+      padding: 0;
 
       .atouts {
         overflow-y: auto;
-        border: solid;
-        border-width: 1px;
-        border-color: gray;
 
         .atout {
-          margin-top: 5px;
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-left: 2px;
-          margin-right: 2px;
+          height: 20px;
+          padding: 0 5px 0 5px;
 
           &:hover {
             cursor: pointer;
@@ -114,10 +110,6 @@
           &:nth-child(even) {
             background-color: silver;
           }
-          /*
-            &:nth-child(even) {
-          }
-          */
 
           &.checked {
             background-color: @color-accent;
@@ -136,9 +128,9 @@
         .bonus-total {
           display: flex;
           flex-direction: row;
-          // justify-content: flex-start;
           justify-content: flex-end;
           align-items: center;
+          padding-right: 10px;
 
           label {
             margin-right: 10px;
@@ -154,22 +146,50 @@
   }
 
   .line-3 {
-    display: table;
-    float: left;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
 
     .part-left-3 {
+      display: flex;
+      flex-direction: column;
       width: 280px;
-      float: left;
+      margin-right: 10px;
+
+      fieldset {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      .formuleElements {
+        display: flex;
+        flex-direction: row;
+        label {
+          width: 50px;
+          margin-right: 10px;
+          text-align: right;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+        }
+        input[type="text"]#autreBonus {
+          width: 50px;
+          margin-right: 10px;
+          text-align: center;
+        }
+        input[type="text"]#formule {
+          width: 140px;
+          margin-right: 10px;
+          text-align: center;
+        }
+      }
 
       .des-img {
-        float: left;
-        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
 
         img {
           width: 75px;
           height: 75px;
-          float: left;
         }
       }
 
@@ -179,27 +199,22 @@
     }
 
     .part-right-3 {
-      margin-left: 285px;
-      width: calc(100% - 285px);
+      display: flex;
+      flex-direction: column;
 
       .depensetotal {
-        float: left;
-        width: 100%;
         display: flex;
         align-items: center;
 
         label {
           width: 200px;
-          float: left;
         }
 
         .form-fields {
-          float: left;
           width: 40px;
 
           input {
             text-align: center;
-            float: left;
             width: 40px;
           }
         }
