--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1403,6 +1403,10 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   gap: 10px;
   justify-content: space-between;
 }
+.penombre-roll-dialog .line-1 .part-left-1 fieldset {
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
 .penombre-roll-dialog .line-1 .part-left-1 fieldset .harmonique {
   display: flex;
   justify-content: center;
@@ -1481,7 +1485,6 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5px;
   margin-bottom: 5px;
 }
 .penombre-roll-dialog .line-2 fieldset .options-total .bonus-total {
@@ -1509,8 +1512,7 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   margin-right: 10px;
 }
 .penombre-roll-dialog .line-3 .part-left-3 fieldset {
-  padding-left: 0;
-  padding-right: 0;
+  padding: 5px 0 10px 0;
 }
 .penombre-roll-dialog .line-3 .part-left-3 .formuleElements {
   display: flex;
