--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -32,6 +32,9 @@
 
     .part-left-1 {
       fieldset {
+        padding-top: 5px;
+        padding-bottom: 10px;
+
         .harmonique {
           display: flex;
           justify-content: center;
@@ -123,7 +126,6 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        margin-top: 5px;
         margin-bottom: 5px;
         .bonus-total {
           display: flex;
@@ -156,8 +158,7 @@
       margin-right: 10px;
 
       fieldset {
-        padding-left: 0;
-        padding-right: 0;
+        padding: 5px 0 10px 0;
       }
 
       .formuleElements {
