--- a/css/penombre.css
+++ b/css/penombre.css
@@ -120,7 +120,7 @@ body {
 }
 body.theme-light .penombre.eminence .eminence-content {
   background-color: #faeed6;
-  background-image: url("/systems/penombre/assets/ui/fond.webp");
+  background-image: url("/systems/penombre/assets/background/fond.webp");
   background-repeat: repeat;
 }
 body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .label-timbre {
@@ -1119,6 +1119,15 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.theme-light .penombre.atout .atout-content,
+.theme-light .penombre.maitrise .maitrise-content,
+.theme-light .penombre.pouvoir .pouvoir-content,
+.theme-light .penombre.intrigue .intrigue-content,
+.theme-light .penombre.action .action-content {
+  background-color: #faeed6;
+  background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
+  background-repeat: repeat;
+}
 .penombre.atout {
   height: 100%;
 }
@@ -1762,7 +1771,7 @@ body {
 body.theme-light .penombre.adversaire .adversaire-content {
   background-color: #faeed6;
   /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
-  background-image: url("/systems/penombre/assets/ui/fond.webp");
+  background-image: url("/systems/penombre/assets/background/fond.webp");
   background-repeat: repeat;
 }
 .penombre.adversaire .adversaire-content {
