--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1394,9 +1394,9 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   color: var(--color-textLight);
 }
 .theme-light .penombre.roll-dialog .window-content {
-  background-color: var(--color-light-3);
-  background-image: url("/systems/penombre/assets/ui/fond.webp");
-  color: #222;
+  background-color: #faeed6;
+  background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
+  background-repeat: repeat;
 }
 .theme-light .penombre.roll-dialog .window-content span,
 .theme-light .penombre.roll-dialog .window-content label {
@@ -1526,6 +1526,8 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 .penombre-roll-dialog .line-3 .part-left-3 .formuleElements {
   display: flex;
   flex-direction: row;
+  margin-left: 10px;
+  right: 10px;
 }
 .penombre-roll-dialog .line-3 .part-left-3 .formuleElements label {
   width: 50px;
@@ -1771,7 +1773,7 @@ body {
 body.theme-light .penombre.adversaire .adversaire-content {
   background-color: #faeed6;
   /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
-  background-image: url("/systems/penombre/assets/background/fond.webp");
+  background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
   background-repeat: repeat;
 }
 .penombre.adversaire .adversaire-content {
