--- a/css/penombre.css
+++ b/css/penombre.css
@@ -1471,6 +1471,7 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 }
 .penombre-roll-dialog .line-2 fieldset .atouts {
   overflow-y: auto;
+  padding: 0 3px 0 2px;
 }
 .penombre-roll-dialog .line-2 fieldset .atouts .atout {
   display: flex;
@@ -1526,8 +1527,6 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 .penombre-roll-dialog .line-3 .part-left-3 .formuleElements {
   display: flex;
   flex-direction: row;
-  margin-left: 10px;
-  right: 10px;
 }
 .penombre-roll-dialog .line-3 .part-left-3 .formuleElements label {
   width: 50px;
