--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -99,6 +99,7 @@
 
       .atouts {
         overflow-y: auto;
+        padding: 0 3px 0 2px;
 
         .atout {
           display: flex;
@@ -165,8 +166,6 @@
       .formuleElements {
         display: flex;
         flex-direction: row;
-        margin-left: 10px;
-        right: 10px;
         label {
           width: 50px;
           margin-right: 10px;
