css titres des rubriques du dialogue mieux affichés

--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -95,11 +95,12 @@
 
   .line-2 {
     fieldset {
-      padding: 0;
+        padding: 0 0 0 15px;
 
       .atouts {
         overflow-y: auto;
-        padding: 0 3px 0 2px;
+        padding: 0 3px 0 3px;
+        margin-left: -15px;
 
         .atout {
           display: flex;
@@ -160,7 +161,7 @@
       margin-right: 10px;
 
       fieldset {
-        padding: 5px 0 10px 0;
+        padding: 5px 0 10px 15px;
       }
 
       .formuleElements {
@@ -169,6 +170,7 @@
         label {
           width: 50px;
           margin-right: 10px;
+          margin-left: -20px;
           text-align: right;
           display: flex;
           align-items: center;
