--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -1,11 +1,11 @@
 .penombre.roll-dialog {
   .window-content {
     .theme-dark & {
-      background: #0b0a13e6;
-      color: var(--color-textLight);
+      // background: #0b0a13e6;
+      // color: var(--color-textLight);
       span,
       label {
-        color: var(--color-textLight);
+        // color: var(--color-textLight);
       }
     }
     .theme-light & {
@@ -15,7 +15,7 @@
       // color: #222;
       span,
       label {
-        color: #222;
+        // color: #222;
       }
     }
   }
