--- a/styles/chat.less
+++ b/styles/chat.less
@@ -162,7 +162,7 @@
               filter: none;
             }
             &.dice-selected {
-              border: solid 2px black;
+              border: solid 2px darkgray;
             }
           }
         }
