actualisation-zone-dédiée-au-système-avec-partie-Support

--- a/templates/sidebar-menu.hbs
+++ b/templates/sidebar-menu.hbs
@@ -9,6 +9,16 @@
     <i class="fa-solid fa-landmark" inert></i>
     {{localize "PENOMBRE.Sidebar.discordLaFonderie"}}
   </a>
+
+  <a class="button" href="https://discord.gg/gQZRWbasfm" rel="nofollow noopener" target="_blank" data-tooltip="{{localize 'PENOMBRE.Sidebar.discordAetherLabsTooltip'}}">
+    <i class="fa-solid fa-landmark" inert></i>
+    {{localize "PENOMBRE.Sidebar.discordAetherLabs"}}
+  </a>
+
+  <a class="button" href="https://www.aether-labs.fr/ressources/ressources-penombre" rel="nofollow noopener" target="_blank" data-tooltip="{{localize 'PENOMBRE.Sidebar.ressourcesAetherLabsTooltip'}}">
+    <i class="fa-solid fa-sack" inert></i>
+    {{localize "PENOMBRE.Sidebar.ressourcesAetherLabs"}}
+  </a>
 </section>
 
 <section class="penombre system flexcol">
