Less : eminence dans un fichier dédié

--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -30,7 +30,6 @@ body {
   */
 }
 
-
 .penombre.adversaire {
   .adversaire-content {
     overflow-y: auto;
@@ -44,8 +43,8 @@ body {
       }
       i {
         &.fa-message-pen {
-        font-size: @font-size-midlarge;
-        color: @color-blue;
+          font-size: @font-size-midlarge;
+          color: @color-blue;
         }
       }
 
@@ -60,7 +59,6 @@ body {
       h5,
       h6 {
         font-family: @font-cattedrale;
-        // text-transform: uppercase;
         color: @color-primary;
       }
 
@@ -74,8 +72,8 @@ body {
       .adversaire-personnage {
         display: flex;
         .logo-frame {
-            height: 175px;
-            width: 175px;
+          height: 175px;
+          width: 175px;
           .logo-img {
             border: solid;
             border-width: 2.5px;
@@ -98,7 +96,6 @@ body {
               box-shadow: 0px 0px 0px 0.75px @color-blue;
             }
           }
-
         }
         .infos {
           flex: 1;
@@ -115,7 +112,7 @@ body {
             margin-left: 20px;
             margin-bottom: 10px;
             label {
-                font-family: @font-cattedrale;
+              font-family: @font-cattedrale;
             }
             input {
               text-align: left;
@@ -174,7 +171,6 @@ body {
         flex-direction: column;
         gap: 10px;
 
-
         .actions-adverses,
         .actions-dissonance {
           display: flex;
@@ -202,7 +198,7 @@ body {
             &:nth-child(even) {
             }
             &:nth-child(odd) {
-            color: @color-primary
+              color: @color-primary;
             }
             position: relative;
             border: 1px solid #ccc;
@@ -218,9 +214,9 @@ body {
               font-size: @font-size-small;
             }
             .item-controls {
-                position: absolute;
-                top: 0.5rem;
-                right: 0.5rem;
+              position: absolute;
+              top: 0.5rem;
+              right: 0.5rem;
             }
           }
         }
@@ -250,7 +246,7 @@ body {
             &:nth-child(even) {
             }
             &:nth-child(odd) {
-            color: @color-primary
+              color: @color-primary;
             }
             position: relative;
             border: 1px solid #ccc;
