--- a/styles/chat.less
+++ b/styles/chat.less
@@ -6,7 +6,6 @@
       color: var(--color-textLight);
       span,
       label {
-        // color: var(--color-textLight);
         color: white;
       }
       button {
@@ -17,14 +16,8 @@
       background-color: @background-light; // Si et seulement si on est en mode clair (et pas sombre) de la fiche
       background-image: url("/systems/penombre/assets/background/fond-coupe-petit.webp");
       background-repeat: repeat;
-      // color: #222;
-      span,
-      label {
-       // color: #222;
-      }
     }
     .message-header {
-      // border-bottom: 1px solid #5d142b;
       border-bottom: 1.5px solid @color-primary;
       display: grid;
       .theme-dark & {
@@ -51,7 +44,6 @@
         color: @color-primary;
         font-family: "Cattedrale";
         font-size: 20px;
-        // font-weight: bold;
         display: inline;
         text-wrap: auto;
       }
@@ -67,7 +59,7 @@
           font-family: "Cattedrale";
           font-size: 1.1rem;
           text-align: center;
-          padding-top: 5px;;
+          padding-top: 5px;
         }
         .roll-infos {
           font-family: "Cattedrale";
