--- a/css/penombre.css
+++ b/css/penombre.css
@@ -193,17 +193,15 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .logo-penombre {
 body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   content: url("/systems/penombre/assets/ui/frise_plus_grande_sur_fond_sombre.webp");
 }
-.penombre {
-  /* ---------------------------------------------
-        Eminence
---------------------------------------------- */
-}
 .penombre.eminence .eminence-content {
   overflow: auto;
   font-family: "Cattedrale";
   color: #a56135;
   font-size: 17px;
   clear: both;
+}
+.penombre.eminence .eminence-content table {
+  margin-top: 0;
 }
 .penombre.eminence .eminence-content .eminence-timbre,
 .penombre.eminence .eminence-content .eminence-timbre-2 {
@@ -618,11 +616,11 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.eminence .eminence-content .eminence-harmoniques {
   color: #56605b;
   /*
-        .editer-harmoniques {
-          // width: 405px;
-          font-size: @font-size-xlarge;
-        }
-        */
+    .editer-harmoniques {
+        // width: 405px;
+        font-size: @font-size-xlarge;
+    }
+    */
 }
 .penombre.eminence .eminence-content .eminence-harmoniques .click:hover {
   cursor: pointer;
@@ -1118,6 +1116,253 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-droite .img-droite {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+}
+/* ---------------------------------------------
+        Thème Clair
+--------------------------------------------- */
+/* ---------------------------------------------
+          Thème Sombre
+--------------------------------------------- */
+body {
+  /*
+  &.theme-dark {
+    .penombre {
+      &.adversaire {
+        .adversaire-content {
+        }
+      }
+    }
+  }
+  */
+}
+body.theme-light .penombre.adversaire .adversaire-content {
+  background-color: #faeed6;
+  /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
+  background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
+  background-repeat: repeat;
+}
+.penombre.adversaire .adversaire-content {
+  overflow-y: auto;
+  font-size: 17px;
+  clear: both;
+}
+.penombre.adversaire .adversaire-content details summary {
+  font-size: 25px;
+  color: #124b63;
+}
+.penombre.adversaire .adversaire-content details i.fa-message-pen {
+  font-size: 25px;
+  color: #124b63;
+}
+.penombre.adversaire .adversaire-content details .editor {
+  font-size: 13px;
+}
+.penombre.adversaire .adversaire-content details h1,
+.penombre.adversaire .adversaire-content details h2,
+.penombre.adversaire .adversaire-content details h3,
+.penombre.adversaire .adversaire-content details h4,
+.penombre.adversaire .adversaire-content details h5,
+.penombre.adversaire .adversaire-content details h6 {
+  font-family: "Cattedrale";
+  color: #a56135;
+}
+.penombre.adversaire .adversaire-content details p {
+  font-size: 13px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main {
+  width: 100%;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage {
+  display: flex;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame {
+  height: 175px;
+  width: 175px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img {
+  border: solid;
+  border-width: 2.5px;
+  border-color: #124b63;
+  height: 175px;
+  width: auto;
+  max-width: 100%;
+  display: block;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img-unlocked {
+  border: solid;
+  border-width: 2.5px;
+  border-color: #124b63;
+  height: 175px;
+  width: auto;
+  max-width: 100%;
+  display: block;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img-unlocked:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 0px 0.75px #124b63;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos input {
+  text-align: center;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom label {
+  font-family: "Cattedrale";
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom input {
+  text-align: left;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .name {
+  font-family: "Cattedrale";
+  color: #124b63;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .description {
+  font-family: "Cattedrale";
+  color: #a56135;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut {
+  display: flex;
+  align-items: left;
+  margin-left: 20px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut label {
+  align-self: center;
+  font-family: "Cattedrale";
+  display: inline-block;
+  width: 120px;
+  font-weight: bold;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut input {
+  margin: 0 5px;
+  width: 50px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut select {
+  margin: 0 5px;
+  width: 120px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut .harmonique {
+  font-family: "Cattedrale";
+  margin: 0 5px;
+  width: 70px;
+  text-align: left;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-adverses,
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-dissonance {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom-style: solid;
+  border-width: 0.5px;
+  border-color: #917f35;
+  margin-top: 7px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-adverses h2,
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-dissonance h2 {
+  color: #124b63;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  margin-bottom: 5px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action {
+  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action:nth-child(odd) {
+  color: #a56135;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .nom {
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+  margin-right: 40px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .description {
+  font-size: 13px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .item-controls {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2px;
+  border-bottom-style: solid;
+  border-width: 0.5px;
+  border-color: #917f35;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues h2 {
+  color: #124b63;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  margin-bottom: 5px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue {
+  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue:nth-child(odd) {
+  color: #a56135;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .nom {
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+  margin-right: 40px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .description {
+  font-size: 13px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .item-controls {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 .theme-light .penombre.atout .atout-content,
 .theme-light .penombre.maitrise .maitrise-content,
@@ -1730,253 +1975,6 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 #interface #sidebar .chat-message .message-content .dice-roll.penombre section.atout li.roll.die.dice-selected,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre section.atout li.roll.die.dice-selected {
   border: solid 2px darkgray;
-}
-/* ---------------------------------------------
-        Thème Clair
---------------------------------------------- */
-/* ---------------------------------------------
-          Thème Sombre
---------------------------------------------- */
-body {
-  /*
-  &.theme-dark {
-    .penombre {
-      &.adversaire {
-        .adversaire-content {
-        }
-      }
-    }
-  }
-  */
-}
-body.theme-light .penombre.adversaire .adversaire-content {
-  background-color: #faeed6;
-  /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
-  background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
-  background-repeat: repeat;
-}
-.penombre.adversaire .adversaire-content {
-  overflow-y: auto;
-  font-size: 17px;
-  clear: both;
-}
-.penombre.adversaire .adversaire-content details summary {
-  font-size: 25px;
-  color: #124b63;
-}
-.penombre.adversaire .adversaire-content details i.fa-message-pen {
-  font-size: 25px;
-  color: #124b63;
-}
-.penombre.adversaire .adversaire-content details .editor {
-  font-size: 13px;
-}
-.penombre.adversaire .adversaire-content details h1,
-.penombre.adversaire .adversaire-content details h2,
-.penombre.adversaire .adversaire-content details h3,
-.penombre.adversaire .adversaire-content details h4,
-.penombre.adversaire .adversaire-content details h5,
-.penombre.adversaire .adversaire-content details h6 {
-  font-family: "Cattedrale";
-  color: #a56135;
-}
-.penombre.adversaire .adversaire-content details p {
-  font-size: 13px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main {
-  width: 100%;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage {
-  display: flex;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame {
-  height: 175px;
-  width: 175px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img {
-  border: solid;
-  border-width: 2.5px;
-  border-color: #124b63;
-  height: 175px;
-  width: auto;
-  max-width: 100%;
-  display: block;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img-unlocked {
-  border: solid;
-  border-width: 2.5px;
-  border-color: #124b63;
-  height: 175px;
-  width: auto;
-  max-width: 100%;
-  display: block;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .logo-frame .logo-img-unlocked:hover {
-  cursor: pointer;
-  box-shadow: 0px 0px 0px 0.75px #124b63;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos input {
-  text-align: center;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-left: 20px;
-  margin-bottom: 10px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom label {
-  font-family: "Cattedrale";
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom input {
-  text-align: left;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.8rem;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .name {
-  font-family: "Cattedrale";
-  color: #124b63;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .description {
-  font-family: "Cattedrale";
-  color: #a56135;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut {
-  display: flex;
-  align-items: left;
-  margin-left: 20px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut label {
-  align-self: center;
-  font-family: "Cattedrale";
-  display: inline-block;
-  width: 120px;
-  font-weight: bold;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut input {
-  margin: 0 5px;
-  width: 50px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut select {
-  margin: 0 5px;
-  width: 120px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut .harmonique {
-  font-family: "Cattedrale";
-  margin: 0 5px;
-  width: 70px;
-  text-align: left;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-adverses,
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-dissonance {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-bottom-style: solid;
-  border-width: 0.5px;
-  border-color: #917f35;
-  margin-top: 7px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-adverses h2,
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-dissonance h2 {
-  color: #124b63;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  text-align: center;
-  margin: 0;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-  margin-bottom: 5px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action {
-  position: relative;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action:nth-child(odd) {
-  color: #a56135;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .nom {
-  font-weight: bold;
-  font-style: italic;
-  text-align: center;
-  margin-right: 40px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .description {
-  font-size: 13px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .item-controls {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2px;
-  border-bottom-style: solid;
-  border-width: 0.5px;
-  border-color: #917f35;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues h2 {
-  color: #124b63;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  text-align: center;
-  margin: 0;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-  margin-bottom: 5px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue {
-  position: relative;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue:nth-child(odd) {
-  color: #a56135;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .nom {
-  font-weight: bold;
-  font-style: italic;
-  text-align: center;
-  margin-right: 40px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .description {
-  font-size: 13px;
-}
-.penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .item-controls {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
 }
 .penombre-sidebar {
   flex-direction: column;
