Personnage : ajout des noms d'entête de colonnes

--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -23,7 +23,7 @@
                         {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
                     <th class="item-case-width">
-
+                        {{ localize 'PENOMBRE.ui.valeur' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
