--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -28,7 +28,7 @@
                         {{ localize 'PENOMBRE.ui.prerequis' }}
                     </th>
                     <th>
-                        
+                        {{ localize 'PENOMBRE.ui.niveau' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
