--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -19,6 +19,7 @@
             <table class="item-list centpourcent">
                 <tr class="centpourcent">
                     <th class="item-coche">
+                        {{localize "PENOMBRE.ui.utilise"}}
                     </th>
                     <th>
                         {{ localize 'PENOMBRE.ui.nom' }}
