Sidebar : Ajout du bouton pour signaler un bug

--- a/templates/sidebar-menu.hbs
+++ b/templates/sidebar-menu.hbs
@@ -15,9 +15,26 @@
     {{localize "PENOMBRE.Sidebar.discordAetherLabs"}}
   </a>
 
-  <a class="button" href="https://www.aether-labs.fr/ressources/ressources-penombre" rel="nofollow noopener" target="_blank" data-tooltip="{{localize 'PENOMBRE.Sidebar.ressourcesAetherLabsTooltip'}}">
+  <a
+    class="button"
+    href="https://www.aether-labs.fr/ressources/ressources-penombre"
+    rel="nofollow noopener"
+    target="_blank"
+    data-tooltip="{{localize 'PENOMBRE.Sidebar.ressourcesAetherLabsTooltip'}}"
+  >
     <i class="fa-solid fa-sack" inert></i>
     {{localize "PENOMBRE.Sidebar.ressourcesAetherLabs"}}
+  </a>
+
+  <a
+    class="button"
+    href="https://github.com/AEther-Labs-Editions/foundry-penombre/issues/new/choose"
+    rel="nofollow noopener"
+    target="_blank"
+    data-tooltip="{{localize 'PENOMBRE.Sidebar.bugReportTooltip'}}"
+  >
+    <i class="fa-solid fa-bug" inert></i>
+    {{localize "PENOMBRE.Sidebar.bugReport"}}
   </a>
 </section>
 
