Ajout de CONFIG.debug.penombre et {{log}} mis en commentaire

--- a/templates/chat/dice-tooltip.hbs
+++ b/templates/chat/dice-tooltip.hbs
@@ -1,4 +1,4 @@
-{{log 'chat harmonique-roll dice-tooltip' this}}
+{{!log 'chat harmonique-roll dice-tooltip' this}}
 {{#if parts.length}}
   <div class="dice-tooltip">
     <div class="wrapper">
