--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -1,4 +1,4 @@
-{{log "adversaire personnage" this}}
+{{!log "adversaire personnage" this}}
 <div class="adversaire-personnage">
     <div class="logo-frame">
       <img class="logo-img{{#if unlocked}}-unlocked{{/if}}" src="{{document.img}}" {{#if unlocked}}data-action="editImage"{{/if}} data-tooltip="{{document.name}}"/>
