--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -114,7 +114,7 @@
           }
 
           &:nth-child(even) {
-            background-color: silver;
+            /* background-color: silver; */
           }
 
           &.checked {
