Moins de gothic dans le tchat

--- a/styles/chat.less
+++ b/styles/chat.less
@@ -62,7 +62,7 @@
           padding-top: 5px;
         }
         .roll-infos {
-          font-family: "Cattedrale";
+          /* font-family: "Cattedrale"; */
           font-size: 1rem;
           text-align: center;
           margin: 5px 0 5px 0;
@@ -75,8 +75,10 @@
           }
         }
         .roll-results {
-          font-family: "Cattedrale";
-          font-size: 1.1rem;
+          /* font-family: "Cattedrale"; */
+          /* font-size: 1.1rem; */
+          font-size: 1rem;
+          font-weight: bold;
           text-align: center;
           .roll-result-total {
             text-align: center;
