Ajout du drop d'harmonique dans la barre de raccourcis
- L'image est la valeur de l'harmonique
- Il faut drag drop le nom de l'harmonique

--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -24,7 +24,7 @@
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-1">
+            <div class="text-gros-1 draggable jetHarmonique" data-harmonique="nuit">
               {{localize "PENOMBRE.ui.nuit"}}
             </div>
           </td>
@@ -47,7 +47,7 @@
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-2">
+            <div class="text-gros-2 draggable jetHarmonique" data-harmonique="ame">
               {{localize "PENOMBRE.ui.ame"}}
             </div>
           </td>
@@ -69,7 +69,7 @@
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-3">
+            <div class="text-gros-3 draggable jetHarmonique" data-harmonique="nature">
               {{localize "PENOMBRE.ui.nature"}}
             </div>
           </td>
@@ -92,7 +92,7 @@
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-4">
+            <div class="text-gros-4 draggable jetHarmonique" data-harmonique="esprit">
               {{localize "PENOMBRE.ui.esprit"}}
             </div>
           </td>
@@ -116,7 +116,7 @@
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-5">
+            <div class="text-gros-5 draggable jetHarmonique" data-harmonique="etincelle">
               {{localize "PENOMBRE.ui.etincelle"}}
             </div>
           </td>
