les dés sont drag'n'drop

--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -19,12 +19,12 @@
               </select>
               {{else}}
                 <div class="de-de-nuit absolue">
-                  <img class="click de-nuit" src="{{getDiceImage nuit}}" data-action="jetHarmonique" data-harmonique="nuit"/>
+                  <img class="click de-nuit  draggable jetHarmonique" src="{{getDiceImage nuit}}" data-action="jetHarmonique" data-harmonique="nuit"/>
                 </div>
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-1 draggable jetHarmonique" data-harmonique="nuit">
+            <div class="text-gros-1">
               {{localize "PENOMBRE.ui.nuit"}}
             </div>
           </td>
@@ -42,12 +42,12 @@
               </select>
               {{else}}
                 <div class="de-d-ame absolue">
-                  <img class="click de-ame" src="{{getDiceImage ame}}" data-action="jetHarmonique" data-harmonique="ame"/>
+                  <img class="click de-ame draggable jetHarmonique" src="{{getDiceImage ame}}" data-action="jetHarmonique" data-harmonique="ame"/>
                 </div>
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-2 draggable jetHarmonique" data-harmonique="ame">
+            <div class="text-gros-2">
               {{localize "PENOMBRE.ui.ame"}}
             </div>
           </td>
@@ -64,12 +64,12 @@
               </select>
               {{else}}
                 <div class="de-de-nature absolue">
-                  <img class="click de-nature" src="{{getDiceImage nature}}" data-action="jetHarmonique" data-harmonique="nature"/>
+                  <img class="click de-nature draggable jetHarmonique" src="{{getDiceImage nature}}" data-action="jetHarmonique" data-harmonique="nature"/>
                 </div>
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-3 draggable jetHarmonique" data-harmonique="nature">
+            <div class="text-gros-3">
               {{localize "PENOMBRE.ui.nature"}}
             </div>
           </td>
@@ -87,12 +87,12 @@
               </select>
               {{else}}
                 <div class="de-d-esprit absolue">
-                  <img class="click de-esprit" src="{{getDiceImage esprit}}" data-action="jetHarmonique" data-harmonique="esprit"/>
+                  <img class="click de-esprit draggable jetHarmonique" src="{{getDiceImage esprit}}" data-action="jetHarmonique" data-harmonique="esprit"/>
                 </div>
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-4 draggable jetHarmonique" data-harmonique="esprit">
+            <div class="text-gros-4">
               {{localize "PENOMBRE.ui.esprit"}}
             </div>
           </td>
@@ -111,12 +111,12 @@
               </select>
               {{else}}
                 <div class="de-d-etincelle absolue">
-                  <img class="click de-etincelle" src="{{getDiceImage etincelle}}" data-action="jetHarmonique" data-harmonique="etincelle"/>
+                  <img class="click de-etincelle draggable jetHarmonique" src="{{getDiceImage etincelle}}" data-action="jetHarmonique" data-harmonique="etincelle"/>
                 </div>
               {{/if}}
             </div>
             <br />&nbsp;<br />
-            <div class="text-gros-5 draggable jetHarmonique" data-harmonique="etincelle">
+            <div class="text-gros-5">
               {{localize "PENOMBRE.ui.etincelle"}}
             </div>
           </td>
